  Stas)

- Fixed bug #49032 (SplFileObject::fscanf() variables passed by reference).
  (Jani)
- Fixed bug #49012 (phar tar signature algorithm reports as Unknown (0) in
  getSignature() call). (Greg)
- Fixed bug #49020 (phar misinterprets ustar long filename standard).
  (Greg)
- Fixed bug #49018 (phar tar stores long filenames wit prefix/name reversed).
  (Greg)
- Fixed bug #48962 (cURL does not upload files with specified filename).
  (Ilia)
- Fixed bug #48929 (Double \r\n after HTTP headers when "header" context
  option is an array). (David Zülke)
- Fixed bug #49014 (dechunked filter broken when serving more than 8192 bytes in
  a chunk) (andreas dot streichardt at globalpark dot com, Ilia)
- Fixed bug #48899 (is_callable returns true even if method does not exist in
  parent class). (Felipe)
- Fixed bug #48893 (Problems compiling with Curl). (Felipe)
- Fixed bug #48854 (array_merge_recursive modifies arrays after first one).
  (Felipe)
- Fixed bug #48788 (RecursiveDirectoryIterator doesn't descend into symlinked
  directories). (Ilia)
- Fixed bug #48771 (rename() between volumes fails and reports no error on 
  Windows). (Pierre)
- Fixed bug #48763 (ZipArchive produces corrupt archive). (dani dot church at 
  gmail dot com, Pierre)
- Fixed bug #48757 (ReflectionFunction::invoke() parameter issues). (Kalle)
- Fixed bug #48733 (CURLOPT_WRITEHEADER|CURLOPT_FILE|CURLOPT_STDERR warns on
  files that have been opened with r+). (Ilia)
- Fixed bug #48718 (FILTER_VALIDATE_EMAIL does not allow numbers in domain  
  components). (Ilia)
- Fixed bug #48681 (openssl signature verification for tar archives broken).
  (Greg)
- Fixed bug #48247 (Infinite loop and possible crash during startup with
  errors when errors are logged). (Jani)
- Fixed bug #48116 (Fixed build with Openssl 1.0). (Pierre, 
  Al dot Smith at aeschi dot ch dot eu dot org)
- Fixed bug #47481 (natcasesort() does not sort extended ASCII characters
  correctly). (Herman Radtke)