@@ -14,17 +14,18 @@ PHP                                                                        NEWS
   (Greg)
 - Fixed bug #49018 (phar tar stores long filenames wit prefix/name reversed).
   (Greg)
+- Fixed bug #49014 (dechunked filter broken when serving more than 8192 bytes in
+  a chunk). (andreas dot streichardt at globalpark dot com, Ilia)
 - Fixed bug #48962 (cURL does not upload files with specified filename).
   (Ilia)
 - Fixed bug #48929 (Double \r\n after HTTP headers when "header" context
   option is an array). (David Zülke)
-- Fixed bug #49014 (dechunked filter broken when serving more than 8192 bytes in
-  a chunk) (andreas dot streichardt at globalpark dot com, Ilia)
 - Fixed bug #48899 (is_callable returns true even if method does not exist in
   parent class). (Felipe)
 - Fixed bug #48893 (Problems compiling with Curl). (Felipe)
 - Fixed bug #48854 (array_merge_recursive modifies arrays after first one).
   (Felipe)
+- Fixed bug #48802 (printf() returns incorrect outputted length). (Jani)
 - Fixed bug #48788 (RecursiveDirectoryIterator doesn't descend into symlinked
   directories). (Ilia)
 - Fixed bug #48771 (rename() between volumes fails and reports no error on 
